# Batch-Image-Editor

./: Cargo.toml  README.md  index.css  index.html  script.js
src/: lib.rs
