[package]
name = "batch-image-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = "0.3"
js-sys = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
wee_alloc = "0.4"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  "serde-serialize",
]